parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENTBLOCK
    INTERFACE

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimir_instr
Rule 5     instruccion -> declaracion
Rule 6     instruccion -> asignacion PUNTOCOMA
Rule 7     instruccion -> sIf
Rule 8     instruccion -> sWhile
Rule 9     instruccion -> sFor
Rule 10    instruccion -> sContinue
Rule 11    instruccion -> sBreak
Rule 12    instruccion -> sReturn
Rule 13    instruccion -> sSwitch
Rule 14    instruccion -> declaracion_Funcion
Rule 15    instruccion -> callFuncion PUNTOCOMA
Rule 16    instruccion -> argumento_Funcion PUNTOCOMA
Rule 17    argumento_Funcion -> ID PUNTO ID PARIZQ venir_Expresiones
Rule 18    accesoArgumento -> ID PUNTO ID
Rule 19    callFuncion -> ID PARIZQ venir_Expresiones
Rule 20    venir_Expresiones -> lista_Expresiones PARDER
Rule 21    venir_Expresiones -> PARDER
Rule 22    lista_Expresiones -> lista_Expresiones COMA op_Ternario
Rule 23    lista_Expresiones -> op_Ternario
Rule 24    declaracion_Funcion -> FUNCTION ID PARIZQ parametros tipoFuncion instrucciones LLAVDER
Rule 25    parametros -> PARDER
Rule 26    parametros -> lista_Parametros PARDER
Rule 27    lista_Parametros -> lista_Parametros COMA ID DOSPUNTOS tipo
Rule 28    lista_Parametros -> ID DOSPUNTOS tipo
Rule 29    lista_Parametros -> lista_Parametros COMA ID DOSPUNTOS tipo CORIZQ CORDER
Rule 30    lista_Parametros -> ID DOSPUNTOS tipo CORIZQ CORDER
Rule 31    tipoFuncion -> DOSPUNTOS tipo LLAVIZQ
Rule 32    tipoFuncion -> LLAVIZQ
Rule 33    sSwitch -> SWITCH PARIZQ op_Ternario PARDER LLAVIZQ listCases LLAVDER
Rule 34    listCases -> listCases CASE op_Ternario DOSPUNTOS instrucciones
Rule 35    listCases -> listCases DEFAULT DOSPUNTOS instrucciones
Rule 36    listCases -> CASE op_Ternario DOSPUNTOS instrucciones
Rule 37    listCases -> DEFAULT DOSPUNTOS instrucciones
Rule 38    sContinue -> CONTINUE PUNTOCOMA
Rule 39    sBreak -> BREAK PUNTOCOMA
Rule 40    sReturn -> RETURN PUNTOCOMA
Rule 41    sReturn -> RETURN op_Ternario PUNTOCOMA
Rule 42    sFor -> FOR PARIZQ declaracion op_Ternario PUNTOCOMA asignacion PARDER LLAVIZQ instrucciones LLAVDER
Rule 43    sWhile -> WHILE PARIZQ op_Ternario PARDER LLAVIZQ instrucciones LLAVDER
Rule 44    sIf -> IF PARIZQ op_Ternario PARDER LLAVIZQ instrucciones sIf2
Rule 45    sIf2 -> LLAVDER ELSE sElse
Rule 46    sIf2 -> LLAVDER
Rule 47    sElse -> LLAVIZQ instrucciones LLAVDER
Rule 48    sElse -> sIf
Rule 49    asignacion -> ID IGUAL op_Ternario
Rule 50    asignacion -> ID MAS IGUAL op_Ternario
Rule 51    asignacion -> ID MENOS IGUAL op_Ternario
Rule 52    asignacion -> ID CORIZQ op_Ternario CORDER IGUAL op_Ternario
Rule 53    asignacion -> ID CORIZQ op_Ternario CORDER listaAccesos IGUAL op_Ternario
Rule 54    listaAccesos -> listaAccesos CORIZQ op_Ternario CORDER
Rule 55    listaAccesos -> CORIZQ op_Ternario CORDER
Rule 56    asignacion -> ID MAS MAS
Rule 57    asignacion -> ID MENOS MENOS
Rule 58    declaracion -> tipoVar ID DOSPUNTOS tipo declaracion_explicita
Rule 59    declaracion -> tipoVar ID DOSPUNTOS tipo lista_Corchetes declaracion_explicita
Rule 60    declaracion -> tipoVar ID declaracion_implicita
Rule 61    lista_Corchetes -> lista_Corchetes CORIZQ CORDER
Rule 62    lista_Corchetes -> CORIZQ CORDER
Rule 63    declaracion_explicita -> PUNTOCOMA
Rule 64    declaracion_explicita -> IGUAL op_Ternario PUNTOCOMA
Rule 65    declaracion_implicita -> IGUAL op_Ternario PUNTOCOMA
Rule 66    tipoVar -> VAR
Rule 67    tipoVar -> CONST
Rule 68    tipo -> NUMBER
Rule 69    tipo -> FLOAT
Rule 70    tipo -> STRING
Rule 71    tipo -> BOOLEAN
Rule 72    tipo -> CHAR
Rule 73    imprimir_instr -> CONSOLE PUNTO LOG PARIZQ lista_exp PARDER PUNTOCOMA
Rule 74    lista_exp -> lista_exp COMA op_Ternario
Rule 75    lista_exp -> op_Ternario
Rule 76    op_Ternario -> exp_Or INTERROGACION exp_Or DOSPUNTOS exp_Or
Rule 77    op_Ternario -> exp_Or
Rule 78    op_Ternario -> TYPEOF op_Ternario
Rule 79    exp_Or -> exp_Or OR exp_And
Rule 80    exp_Or -> exp_And
Rule 81    exp_And -> exp_And AND exp_Not
Rule 82    exp_And -> exp_Not
Rule 83    exp_Not -> lNot exp_Comp
Rule 84    exp_Not -> exp_Comp
Rule 85    lNot -> lNot NOT
Rule 86    lNot -> NOT
Rule 87    exp_Comp -> exp_Sum_Menos EQUIVALENTE exp_Sum_Menos
Rule 88    exp_Comp -> exp_Sum_Menos DISTINTO exp_Sum_Menos
Rule 89    exp_Comp -> exp_rel
Rule 90    exp_rel -> exp_Sum_Menos MAYOR exp_Sum_Menos
Rule 91    exp_rel -> exp_Sum_Menos MENOR exp_Sum_Menos
Rule 92    exp_rel -> exp_Sum_Menos MAYORIGUAL exp_Sum_Menos
Rule 93    exp_rel -> exp_Sum_Menos MENORIGUAL exp_Sum_Menos
Rule 94    exp_rel -> exp_Sum_Menos
Rule 95    exp_Sum_Menos -> exp_Sum_Menos MAS exp_Mul_Div
Rule 96    exp_Sum_Menos -> exp_Sum_Menos MENOS exp_Mul_Div
Rule 97    exp_Sum_Menos -> exp_Mul_Div
Rule 98    exp_Mul_Div -> exp_Mul_Div POR exp_Parentesis
Rule 99    exp_Mul_Div -> exp_Mul_Div DIVIDIDO exp_Parentesis
Rule 100   exp_Mul_Div -> exp_Mul_Div MODULO exp_Parentesis
Rule 101   exp_Mul_Div -> exp_Parentesis
Rule 102   exp_Parentesis -> PARIZQ op_Ternario PARDER
Rule 103   exp_Parentesis -> exp_Negativo
Rule 104   exp_Negativo -> MENOS valor
Rule 105   exp_Negativo -> valor
Rule 106   valor -> ENTERO
Rule 107   valor -> CADENA
Rule 108   valor -> DECIMAL
Rule 109   valor -> CARACTER
Rule 110   valor -> TRUE PUNTO ID PARIZQ PARDER
Rule 111   valor -> FALSE PUNTO ID PARIZQ PARDER
Rule 112   valor -> TRUE
Rule 113   valor -> FALSE
Rule 114   valor -> NULL
Rule 115   valor -> ID
Rule 116   valor -> callFuncion
Rule 117   valor -> CORIZQ lista_Expresiones CORDER
Rule 118   valor -> CORIZQ CORDER
Rule 119   valor -> ID CORIZQ op_Ternario CORDER
Rule 120   valor -> ID CORIZQ op_Ternario CORDER listaAccesos
Rule 121   valor -> argumento_Funcion
Rule 122   valor -> accesoArgumento

Terminals, with rules where they appear

AND                  : 81
BOOLEAN              : 71
BREAK                : 39
CADENA               : 107
CARACTER             : 109
CASE                 : 34 36
CHAR                 : 72
COMA                 : 22 27 29 74
COMMENTBLOCK         : 
CONSOLE              : 73
CONST                : 67
CONTINUE             : 38
CORDER               : 29 30 52 53 54 55 61 62 117 118 119 120
CORIZQ               : 29 30 52 53 54 55 61 62 117 118 119 120
DECIMAL              : 108
DEFAULT              : 35 37
DISTINTO             : 88
DIVIDIDO             : 99
DOSPUNTOS            : 27 28 29 30 31 34 35 36 37 58 59 76
ELSE                 : 45
ENTERO               : 106
EQUIVALENTE          : 87
FALSE                : 111 113
FLOAT                : 69
FOR                  : 42
FUNCTION             : 24
ID                   : 17 17 18 18 19 24 27 28 29 30 49 50 51 52 53 56 57 58 59 60 110 111 115 119 120
IF                   : 44
IGUAL                : 49 50 51 52 53 64 65
INTERFACE            : 
INTERROGACION        : 76
LLAVDER              : 24 33 42 43 45 46 47
LLAVIZQ              : 31 32 33 42 43 44 47
LOG                  : 73
MAS                  : 50 56 56 95
MAYOR                : 90
MAYORIGUAL           : 92
MENOR                : 91
MENORIGUAL           : 93
MENOS                : 51 57 57 96 104
MODULO               : 100
NOT                  : 85 86
NULL                 : 114
NUMBER               : 68
OR                   : 79
PARDER               : 20 21 25 26 33 42 43 44 73 102 110 111
PARIZQ               : 17 19 24 33 42 43 44 73 102 110 111
POR                  : 98
PUNTO                : 17 18 73 110 111
PUNTOCOMA            : 6 15 16 38 39 40 41 42 63 64 65 73
RETURN               : 40 41
STRING               : 70
SWITCH               : 33
TRUE                 : 110 112
TYPEOF               : 78
VAR                  : 66
WHILE                : 43
error                : 

Nonterminals, with rules where they appear

accesoArgumento      : 122
argumento_Funcion    : 16 121
asignacion           : 6 42
callFuncion          : 15 116
declaracion          : 5 42
declaracion_Funcion  : 14
declaracion_explicita : 58 59
declaracion_implicita : 60
exp_And              : 79 80 81
exp_Comp             : 83 84
exp_Mul_Div          : 95 96 97 98 99 100
exp_Negativo         : 103
exp_Not              : 81 82
exp_Or               : 76 76 76 77 79
exp_Parentesis       : 98 99 100 101
exp_Sum_Menos        : 87 87 88 88 90 90 91 91 92 92 93 93 94 95 96
exp_rel              : 89
imprimir_instr       : 4
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 24 34 35 36 37 42 43 44 47
lNot                 : 83 85
listCases            : 33 34 35
listaAccesos         : 53 54 120
lista_Corchetes      : 59 61
lista_Expresiones    : 20 22 117
lista_Parametros     : 26 27 29
lista_exp            : 73 74
op_Ternario          : 22 23 33 34 36 41 42 43 44 49 50 51 52 52 53 53 54 55 64 65 74 75 78 102 119 120
parametros           : 24
sBreak               : 11
sContinue            : 10
sElse                : 45
sFor                 : 9
sIf                  : 7 48
sIf2                 : 44
sReturn              : 12
sSwitch              : 13
sWhile               : 8
tipo                 : 27 28 29 30 31 58 59
tipoFuncion          : 24
tipoVar              : 58 59 60
valor                : 104 105
venir_Expresiones    : 17 19

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimir_instr
    (5) instruccion -> . declaracion
    (6) instruccion -> . asignacion PUNTOCOMA
    (7) instruccion -> . sIf
    (8) instruccion -> . sWhile
    (9) instruccion -> . sFor
    (10) instruccion -> . sContinue
    (11) instruccion -> . sBreak
    (12) instruccion -> . sReturn
    (13) instruccion -> . sSwitch
    (14) instruccion -> . declaracion_Funcion
    (15) instruccion -> . callFuncion PUNTOCOMA
    (16) instruccion -> . argumento_Funcion PUNTOCOMA
    (73) imprimir_instr -> . CONSOLE PUNTO LOG PARIZQ lista_exp PARDER PUNTOCOMA
    (58) declaracion -> . tipoVar ID DOSPUNTOS tipo declaracion_explicita
    (59) declaracion -> . tipoVar ID DOSPUNTOS tipo lista_Corchetes declaracion_explicita
    (60) declaracion -> . tipoVar ID declaracion_implicita
    (49) asignacion -> . ID IGUAL op_Ternario
    (50) asignacion -> . ID MAS IGUAL op_Ternario
    (51) asignacion -> . ID MENOS IGUAL op_Ternario
    (52) asignacion -> . ID CORIZQ op_Ternario CORDER IGUAL op_Ternario
    (53) asignacion -> . ID CORIZQ op_Ternario CORDER listaAccesos IGUAL op_Ternario
    (56) asignacion -> . ID MAS MAS
    (57) asignacion -> . ID MENOS MENOS
    (44) sIf -> . IF PARIZQ op_Ternario PARDER LLAVIZQ instrucciones sIf2
    (43) sWhile -> . WHILE PARIZQ op_Ternario PARDER LLAVIZQ instrucciones LLAVDER
    (42) sFor -> . FOR PARIZQ declaracion op_Ternario PUNTOCOMA asignacion PARDER LLAVIZQ instrucciones LLAVDER
    (38) sContinue -> . CONTINUE PUNTOCOMA
    (39) sBreak -> . BREAK PUNTOCOMA
    (40) sReturn -> . RETURN PUNTOCOMA
    (41) sReturn -> . RETURN op_Ternario PUNTOCOMA
    (33) sSwitch -> . SWITCH PARIZQ op_Ternario PARDER LLAVIZQ listCases LLAVDER
    (24) declaracion_Funcion -> . FUNCTION ID PARIZQ parametros tipoFuncion instrucciones LLAVDER
    (19) callFuncion -> . ID PARIZQ venir_Expresiones
    (17) argumento_Funcion -> . ID PUNTO ID PARIZQ venir_Expresiones
    (66) tipoVar -> . VAR
    (67) tipoVar -> . CONST

    CONSOLE         shift and go to state 17
    ID              shift and go to state 19
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    FOR             shift and go to state 22
    CONTINUE        shift and go to state 23
    BREAK           shift and go to state 24
    RETURN          shift and go to state 25
    SWITCH          shift and go to state 26
    FUNCTION        shift and go to state 27
    VAR             shift and go to state 28
    CONST           shift and go to state 29

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir_instr                 shift and go to state 4
    declaracion                    shift and go to state 5
    asignacion                     shift and go to state 6
    sIf                            shift and go to state 7
    sWhile                         shift and go to state 8
    sFor                           shift and go to state 9
    sContinue                      shift and go to state 10
    sBreak                         shift and go to state 11
    sReturn                        shift and go to state 12
    sSwitch                        shift and go to state 13
    declaracion_Funcion            shift and go to state 14
    callFuncion                    shift and go to state 15
    argumento_Funcion              shift and go to state 16
    tipoVar                        shift and go to state 18

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimir_instr
    (5) instruccion -> . declaracion
    (6) instruccion -> . asignacion PUNTOCOMA
    (7) instruccion -> . sIf
    (8) instruccion -> . sWhile
    (9) instruccion -> . sFor
    (10) instruccion -> . sContinue
    (11) instruccion -> . sBreak
    (12) instruccion -> . sReturn
    (13) instruccion -> . sSwitch
    (14) instruccion -> . declaracion_Funcion
    (15) instruccion -> . callFuncion PUNTOCOMA
    (16) instruccion -> . argumento_Funcion PUNTOCOMA
    (73) imprimir_instr -> . CONSOLE PUNTO LOG PARIZQ lista_exp PARDER PUNTOCOMA
    (58) declaracion -> . tipoVar ID DOSPUNTOS tipo declaracion_explicita
    (59) declaracion -> . tipoVar ID DOSPUNTOS tipo lista_Corchetes declaracion_explicita
    (60) declaracion -> . tipoVar ID declaracion_implicita
    (49) asignacion -> . ID IGUAL op_Ternario
    (50) asignacion -> . ID MAS IGUAL op_Ternario
    (51) asignacion -> . ID MENOS IGUAL op_Ternario
    (52) asignacion -> . ID CORIZQ op_Ternario CORDER IGUAL op_Ternario
    (53) asignacion -> . ID CORIZQ op_Ternario CORDER listaAccesos IGUAL op_Ternario
    (56) asignacion -> . ID MAS MAS
    (57) asignacion -> . ID MENOS MENOS
    (44) sIf -> . IF PARIZQ op_Ternario PARDER LLAVIZQ instrucciones sIf2
    (43) sWhile -> . WHILE PARIZQ op_Ternario PARDER LLAVIZQ instrucciones LLAVDER
    (42) sFor -> . FOR PARIZQ declaracion op_Ternario PUNTOCOMA asignacion PARDER LLAVIZQ instrucciones LLAVDER
    (38) sContinue -> . CONTINUE PUNTOCOMA
    (39) sBreak -> . BREAK PUNTOCOMA
    (40) sReturn -> . RETURN PUNTOCOMA
    (41) sReturn -> . RETURN op_Ternario PUNTOCOMA
    (33) sSwitch -> . SWITCH PARIZQ op_Ternario PARDER LLAVIZQ listCases LLAVDER
    (24) declaracion_Funcion -> . FUNCTION ID PARIZQ parametros tipoFuncion instrucciones LLAVDER
    (19) callFuncion -> . ID PARIZQ venir_Expresiones
    (17) argumento_Funcion -> . ID PUNTO ID PARIZQ venir_Expresiones
    (66) tipoVar -> . VAR
    (67) tipoVar -> . CONST

    $end            reduce using rule 1 (init -> instrucciones .)
    CONSOLE         shift and go to state 17
    ID              shift and go to state 19
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    FOR             shift and go to state 22
    CONTINUE        shift and go to state 23
    BREAK           shift and go to state 24
    RETURN          shift and go to state 25
    SWITCH          shift and go to state 26
    FUNCTION        shift and go to state 27
    VAR             shift and go to state 28
    CONST           shift and go to state 29

    instruccion                    shift and go to state 30
    imprimir_instr                 shift and go to state 4
    declaracion                    shift and go to state 5
    asignacion                     shift and go to state 6
    sIf                            shift and go to state 7
    sWhile                         shift and go to state 8
    sFor                           shift and go to state 9
    sContinue                      shift and go to state 10
    sBreak                         shift and go to state 11
    sReturn                        shift and go to state 12
    sSwitch                        shift and go to state 13
    declaracion_Funcion            shift and go to state 14
    callFuncion                    shift and go to state 15
    argumento_Funcion              shift and go to state 16
    tipoVar                        shift and go to state 18

state 3

    (3) instrucciones -> instruccion .

    CONSOLE         reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    IF              reduce using rule 3 (instrucciones -> instruccion .)
    WHILE           reduce using rule 3 (instrucciones -> instruccion .)
    FOR             reduce using rule 3 (instrucciones -> instruccion .)
    CONTINUE        reduce using rule 3 (instrucciones -> instruccion .)
    BREAK           reduce using rule 3 (instrucciones -> instruccion .)
    RETURN          reduce using rule 3 (instrucciones -> instruccion .)
    SWITCH          reduce using rule 3 (instrucciones -> instruccion .)
    FUNCTION        reduce using rule 3 (instrucciones -> instruccion .)
    VAR             reduce using rule 3 (instrucciones -> instruccion .)
    CONST           reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVDER         reduce using rule 3 (instrucciones -> instruccion .)
    CASE            reduce using rule 3 (instrucciones -> instruccion .)
    DEFAULT         reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimir_instr .

    CONSOLE         reduce using rule 4 (instruccion -> imprimir_instr .)
    ID              reduce using rule 4 (instruccion -> imprimir_instr .)
    IF              reduce using rule 4 (instruccion -> imprimir_instr .)
    WHILE           reduce using rule 4 (instruccion -> imprimir_instr .)
    FOR             reduce using rule 4 (instruccion -> imprimir_instr .)
    CONTINUE        reduce using rule 4 (instruccion -> imprimir_instr .)
    BREAK           reduce using rule 4 (instruccion -> imprimir_instr .)
    RETURN          reduce using rule 4 (instruccion -> imprimir_instr .)
    SWITCH          reduce using rule 4 (instruccion -> imprimir_instr .)
    FUNCTION        reduce using rule 4 (instruccion -> imprimir_instr .)
    VAR             reduce using rule 4 (instruccion -> imprimir_instr .)
    CONST           reduce using rule 4 (instruccion -> imprimir_instr .)
    $end            reduce using rule 4 (instruccion -> imprimir_instr .)
    LLAVDER         reduce using rule 4 (instruccion -> imprimir_instr .)
    CASE            reduce using rule 4 (instruccion -> imprimir_instr .)
    DEFAULT         reduce using rule 4 (instruccion -> imprimir_instr .)


state 5

    (5) instruccion -> declaracion .

    CONSOLE         reduce using rule 5 (instruccion -> declaracion .)
    ID              reduce using rule 5 (instruccion -> declaracion .)
    IF              reduce using rule 5 (instruccion -> declaracion .)
    WHILE           reduce using rule 5 (instruccion -> declaracion .)
    FOR             reduce using rule 5 (instruccion -> declaracion .)
    CONTINUE        reduce using rule 5 (instruccion -> declaracion .)
    BREAK           reduce using rule 5 (instruccion -> declaracion .)
    RETURN          reduce using rule 5 (instruccion -> declaracion .)
    SWITCH          reduce using rule 5 (instruccion -> declaracion .)
    FUNCTION        reduce using rule 5 (instruccion -> declaracion .)
    VAR             reduce using rule 5 (instruccion -> declaracion .)
    CONST           reduce using rule 5 (instruccion -> declaracion .)
    $end            reduce using rule 5 (instruccion -> declaracion .)
    LLAVDER         reduce using rule 5 (instruccion -> declaracion .)
    CASE            reduce using rule 5 (instruccion -> declaracion .)
    DEFAULT         reduce using rule 5 (instruccion -> declaracion .)


state 6

    (6) instruccion -> asignacion . PUNTOCOMA

    PUNTOCOMA       shift and go to state 31


state 7

    (7) instruccion -> sIf .

    CONSOLE         reduce using rule 7 (instruccion -> sIf .)
    ID              reduce using rule 7 (instruccion -> sIf .)
    IF              reduce using rule 7 (instruccion -> sIf .)
    WHILE           reduce using rule 7 (instruccion -> sIf .)
    FOR             reduce using rule 7 (instruccion -> sIf .)
    CONTINUE        reduce using rule 7 (instruccion -> sIf .)
    BREAK           reduce using rule 7 (instruccion -> sIf .)
    RETURN          reduce using rule 7 (instruccion -> sIf .)
    SWITCH          reduce using rule 7 (instruccion -> sIf .)
    FUNCTION        reduce using rule 7 (instruccion -> sIf .)
    VAR             reduce using rule 7 (instruccion -> sIf .)
    CONST           reduce using rule 7 (instruccion -> sIf .)
    $end            reduce using rule 7 (instruccion -> sIf .)
    LLAVDER         reduce using rule 7 (instruccion -> sIf .)
    CASE            reduce using rule 7 (instruccion -> sIf .)
    DEFAULT         reduce using rule 7 (instruccion -> sIf .)


state 8

    (8) instruccion -> sWhile .

    CONSOLE         reduce using rule 8 (instruccion -> sWhile .)
    ID              reduce using rule 8 (instruccion -> sWhile .)
    IF              reduce using rule 8 (instruccion -> sWhile .)
    WHILE           reduce using rule 8 (instruccion -> sWhile .)
    FOR             reduce using rule 8 (instruccion -> sWhile .)
    CONTINUE        reduce using rule 8 (instruccion -> sWhile .)
    BREAK           reduce using rule 8 (instruccion -> sWhile .)
    RETURN          reduce using rule 8 (instruccion -> sWhile .)
    SWITCH          reduce using rule 8 (instruccion -> sWhile .)
    FUNCTION        reduce using rule 8 (instruccion -> sWhile .)
    VAR             reduce using rule 8 (instruccion -> sWhile .)
    CONST           reduce using rule 8 (instruccion -> sWhile .)
    $end            reduce using rule 8 (instruccion -> sWhile .)
    LLAVDER         reduce using rule 8 (instruccion -> sWhile .)
    CASE            reduce using rule 8 (instruccion -> sWhile .)
    DEFAULT         reduce using rule 8 (instruccion -> sWhile .)


state 9

    (9) instruccion -> sFor .

    CONSOLE         reduce using rule 9 (instruccion -> sFor .)
    ID              reduce using rule 9 (instruccion -> sFor .)
    IF              reduce using rule 9 (instruccion -> sFor .)
    WHILE           reduce using rule 9 (instruccion -> sFor .)
    FOR             reduce using rule 9 (instruccion -> sFor .)
    CONTINUE        reduce using rule 9 (instruccion -> sFor .)
    BREAK           reduce using rule 9 (instruccion -> sFor .)
    RETURN          reduce using rule 9 (instruccion -> sFor .)
    SWITCH          reduce using rule 9 (instruccion -> sFor .)
    FUNCTION        reduce using rule 9 (instruccion -> sFor .)
    VAR             reduce using rule 9 (instruccion -> sFor .)
    CONST           reduce using rule 9 (instruccion -> sFor .)
    $end            reduce using rule 9 (instruccion -> sFor .)
    LLAVDER         reduce using rule 9 (instruccion -> sFor .)
    CASE            reduce using rule 9 (instruccion -> sFor .)
    DEFAULT         reduce using rule 9 (instruccion -> sFor .)


state 10

    (10) instruccion -> sContinue .

    CONSOLE         reduce using rule 10 (instruccion -> sContinue .)
    ID              reduce using rule 10 (instruccion -> sContinue .)
    IF              reduce using rule 10 (instruccion -> sContinue .)
    WHILE           reduce using rule 10 (instruccion -> sContinue .)
    FOR             reduce using rule 10 (instruccion -> sContinue .)
    CONTINUE        reduce using rule 10 (instruccion -> sContinue .)
    BREAK           reduce using rule 10 (instruccion -> sContinue .)
    RETURN          reduce using rule 10 (instruccion -> sContinue .)
    SWITCH          reduce using rule 10 (instruccion -> sContinue .)
    FUNCTION        reduce using rule 10 (instruccion -> sContinue .)
    VAR             reduce using rule 10 (instruccion -> sContinue .)
    CONST           reduce using rule 10 (instruccion -> sContinue .)
    $end            reduce using rule 10 (instruccion -> sContinue .)
    LLAVDER         reduce using rule 10 (instruccion -> sContinue .)
    CASE            reduce using rule 10 (instruccion -> sContinue .)
    DEFAULT         reduce using rule 10 (instruccion -> sContinue .)


state 11

    (11) instruccion -> sBreak .

    CONSOLE         reduce using rule 11 (instruccion -> sBreak .)
    ID              reduce using rule 11 (instruccion -> sBreak .)
    IF              reduce using rule 11 (instruccion -> sBreak .)
    WHILE           reduce using rule 11 (instruccion -> sBreak .)
    FOR             reduce using rule 11 (instruccion -> sBreak .)
    CONTINUE        reduce using rule 11 (instruccion -> sBreak .)
    BREAK           reduce using rule 11 (instruccion -> sBreak .)
    RETURN          reduce using rule 11 (instruccion -> sBreak .)
    SWITCH          reduce using rule 11 (instruccion -> sBreak .)
    FUNCTION        reduce using rule 11 (instruccion -> sBreak .)
    VAR             reduce using rule 11 (instruccion -> sBreak .)
    CONST           reduce using rule 11 (instruccion -> sBreak .)
    $end            reduce using rule 11 (instruccion -> sBreak .)
    LLAVDER         reduce using rule 11 (instruccion -> sBreak .)
    CASE            reduce using rule 11 (instruccion -> sBreak .)
    DEFAULT         reduce using rule 11 (instruccion -> sBreak .)


state 12

    (12) instruccion -> sReturn .

    CONSOLE         reduce using rule 12 (instruccion -> sReturn .)
    ID              reduce using rule 12 (instruccion -> sReturn .)
    IF              reduce using rule 12 (instruccion -> sReturn .)
    WHILE           reduce using rule 12 (instruccion -> sReturn .)
    FOR             reduce using rule 12 (instruccion -> sReturn .)
    CONTINUE        reduce using rule 12 (instruccion -> sReturn .)
    BREAK           reduce using rule 12 (instruccion -> sReturn .)
    RETURN          reduce using rule 12 (instruccion -> sReturn .)
    SWITCH          reduce using rule 12 (instruccion -> sReturn .)
    FUNCTION        reduce using rule 12 (instruccion -> sReturn .)
    VAR             reduce using rule 12 (instruccion -> sReturn .)
    CONST           reduce using rule 12 (instruccion -> sReturn .)
    $end            reduce using rule 12 (instruccion -> sReturn .)
    LLAVDER         reduce using rule 12 (instruccion -> sReturn .)
    CASE            reduce using rule 12 (instruccion -> sReturn .)
    DEFAULT         reduce using rule 12 (instruccion -> sReturn .)


state 13

    (13) instruccion -> sSwitch .

    CONSOLE         reduce using rule 13 (instruccion -> sSwitch .)
    ID              reduce using rule 13 (instruccion -> sSwitch .)
    IF              reduce using rule 13 (instruccion -> sSwitch .)
    WHILE           reduce using rule 13 (instruccion -> sSwitch .)
    FOR             reduce using rule 13 (instruccion -> sSwitch .)
    CONTINUE        reduce using rule 13 (instruccion -> sSwitch .)
    BREAK           reduce using rule 13 (instruccion -> sSwitch .)
    RETURN          reduce using rule 13 (instruccion -> sSwitch .)
    SWITCH          reduce using rule 13 (instruccion -> sSwitch .)
    FUNCTION        reduce using rule 13 (instruccion -> sSwitch .)
    VAR             reduce using rule 13 (instruccion -> sSwitch .)
    CONST           reduce using rule 13 (instruccion -> sSwitch .)
    $end            reduce using rule 13 (instruccion -> sSwitch .)
    LLAVDER         reduce using rule 13 (instruccion -> sSwitch .)
    CASE            reduce using rule 13 (instruccion -> sSwitch .)
    DEFAULT         reduce using rule 13 (instruccion -> sSwitch .)


state 14

    (14) instruccion -> declaracion_Funcion .

    CONSOLE         reduce using rule 14 (instruccion -> declaracion_Funcion .)
    ID              reduce using rule 14 (instruccion -> declaracion_Funcion .)
    IF              reduce using rule 14 (instruccion -> declaracion_Funcion .)
    WHILE           reduce using rule 14 (instruccion -> declaracion_Funcion .)
    FOR             reduce using rule 14 (instruccion -> declaracion_Funcion .)
    CONTINUE        reduce using rule 14 (instruccion -> declaracion_Funcion .)
    BREAK           reduce using rule 14 (instruccion -> declaracion_Funcion .)
    RETURN          reduce using rule 14 (instruccion -> declaracion_Funcion .)
    SWITCH          reduce using rule 14 (instruccion -> declaracion_Funcion .)
    FUNCTION        reduce using rule 14 (instruccion -> declaracion_Funcion .)
    VAR             reduce using rule 14 (instruccion -> declaracion_Funcion .)
    CONST           reduce using rule 14 (instruccion -> declaracion_Funcion .)
    $end            reduce using rule 14 (instruccion -> declaracion_Funcion .)
    LLAVDER         reduce using rule 14 (instruccion -> declaracion_Funcion .)
    CASE            reduce using rule 14 (instruccion -> declaracion_Funcion .)
    DEFAULT         reduce using rule 14 (instruccion -> declaracion_Funcion .)


state 15

    (15) instruccion -> callFuncion . PUNTOCOMA

    PUNTOCOMA       shift and go to state 32


state 16

    (16) instruccion -> argumento_Funcion . PUNTOCOMA

    PUNTOCOMA       shift and go to state 33


state 17

    (73) imprimir_instr -> CONSOLE . PUNTO LOG PARIZQ lista_exp PARDER PUNTOCOMA

    PUNTO           shift and go to state 34


state 18

    (58) declaracion -> tipoVar . ID DOSPUNTOS tipo declaracion_explicita
    (59) declaracion -> tipoVar . ID DOSPUNTOS tipo lista_Corchetes declaracion_explicita
    (60) declaracion -> tipoVar . ID declaracion_implicita

    ID              shift and go to state 35


state 19

    (49) asignacion -> ID . IGUAL op_Ternario
    (50) asignacion -> ID . MAS IGUAL op_Ternario
    (51) asignacion -> ID . MENOS IGUAL op_Ternario
    (52) asignacion -> ID . CORIZQ op_Ternario CORDER IGUAL op_Ternario
    (53) asignacion -> ID . CORIZQ op_Ternario CORDER listaAccesos IGUAL op_Ternario
    (56) asignacion -> ID . MAS MAS
    (57) asignacion -> ID . MENOS MENOS
    (19) callFuncion -> ID . PARIZQ venir_Expresiones
    (17) argumento_Funcion -> ID . PUNTO ID PARIZQ venir_Expresiones

    IGUAL           shift and go to state 36
    MAS             shift and go to state 37
    MENOS           shift and go to state 38
    CORIZQ          shift and go to state 39
    PARIZQ          shift and go to state 40
    PUNTO           shift and go to state 41


state 20

    (44) sIf -> IF . PARIZQ op_Ternario PARDER LLAVIZQ instrucciones sIf2

    PARIZQ          shift and go to state 42


state 21

    (43) sWhile -> WHILE . PARIZQ op_Ternario PARDER LLAVIZQ instrucciones LLAVDER

    PARIZQ          shift and go to state 43


state 22
